--- a/project.html
+++ b/project.html
@@ -186,7 +186,7 @@ hljs.initHighlightingOnLoad();
 
 <h2>Loading data</h2>
 
-<p>The training data for this project are available   <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv">here</a> and the tests data <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv">here</a> </p>
+<p>The training data for this project are available   <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/training.csv">here</a> and the tests data <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/testing.csv">here</a> </p>
 
 <p>After downloading into the working directory, the following code loads them in <em>training</em> and <em>test</em>. Needed libraries are also loaded.</p>
 
@@ -194,8 +194,8 @@ hljs.initHighlightingOnLoad();
 library(parallel)
 library(doParallel)
 #load raw data
-training &lt;- read.csv(&quot;pml-training.csv&quot;, header = TRUE)
-test  &lt;- read.csv(&#39;pml-testing.csv&#39;)
+training &lt;- read.csv(&quot;training.csv&quot;, header = TRUE)
+test  &lt;- read.csv(&#39;testing.csv&#39;)
 </code></pre>
 
 <h2>Cleaning data </h2>
